--- a/RDR1-historia.html
+++ b/RDR1-historia.html
@@ -23,7 +23,7 @@
 
     <nav>
       <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="RDR1-historia.html">RDR1 - História</a></li>
         <li><a href="RDR2-historia.html">RDR2 - História</a></li>
         <li><a href="personagens-rdr1.html">Personagens RDR1</a></li>
@@ -104,3 +104,4 @@
   </main>
 </body>
 </html>
+
