--- a/personagens-rdr1.html
+++ b/personagens-rdr1.html
@@ -24,7 +24,7 @@
 
     <nav>
       <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="RDR1-historia.html">RDR1 - História</a></li>
         <li><a href="RDR2-historia.html">RDR2 - História</a></li>
         <li><a href="personagens-rdr1.html">Personagens RDR1</a></li>
@@ -412,4 +412,5 @@ Sua relação com John é cheia de tensões acumuladas ao longo dos anos.</p>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
