--- a/personagens-rdr2.html
+++ b/personagens-rdr2.html
@@ -24,7 +24,7 @@
     
     <nav>
       <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="RDR1-historia.html">RDR1 - História</a></li>
         <li><a href="RDR2-historia.html">RDR2 - História</a></li>
         <li><a href="personagens-rdr1.html">Personagens RDR1</a></li>
@@ -509,3 +509,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
