--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home - Red Dead Redemption</title>
+  <title>index - Red Dead Redemption</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -53,3 +53,4 @@
 </body>
 
 </html>
+
